--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,8 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "guid-typescript": "^1.0.9",
+    "ng2-rut": "^0.3.2",
+    "ng9-rut": "^0.1.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.3.0",
     "tslib": "^2.3.0",
